# ns3-sims

./: .gitignore  CMakeLists.txt  README.md  p1.cc
cmake/: FindNS3.cmake
data/: p1-10_BulkSendApps.data  p1-1_BulkSendApp.data
reports/: Lab-02-Comparison_of_RED_vs_DropTail_Queuing.odt  Lab-02-DropTail-vs-RED-Queue.odt
scripts/: p1-plot.py  p2-plot.py  plotdata.py  pvplot.py  run-p1.sh  run-p2.sh
src/: p1.cc  p2.cc  p3.cc
worms/: ns3-worm.cc  ns3-worm.h  ns3-wormudp.cc  ns3-wormudp.h
worms/gtnets-worms/: testworm.cc  worm-containment.h  worm.cc  worm.h  wormhelper.cc  wormhelper.h  wormsim.cc  wormtargetvector.cc  wormtargetvector.h  wormtcp.cc  wormtcp.h  wormudp.cc  wormudp.h
